# gcpp

./: .clang-tidy  .gitignore  CMakeLists.txt  GTestCMakeLists.txt.in
include/: collector.h  concurrent_gc.h  copy_collector.h  copy_collector.inl  debug_thread_counter.h  gc_base.h  gc_scan.h  mem_prot.h  safe_alloc.h  safe_ptr.h  task.h  task.inl
src/: CMakeLists.txt  concurrent_gc.cpp  copy_collector.cpp  gc_scan.cpp  mem_prot.cpp  safe_alloc.cpp
test/: CMakeLists.txt  basic_test.cpp  copy_test.cpp  frontend_test.cpp  mt_test.cpp  scan_test.cpp  utils_test.cpp
